--- a/lab6_ANGULAR/aspnet-core/src/LAB.Web.Host/appsettings.json
+++ b/lab6_ANGULAR/aspnet-core/src/LAB.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=RA250B-07; Database=LAB_IO; Trusted_Connection=True;"
+    "Default": "Server=RA250B-07; Database=LAB_IO2; Trusted_Connection=True;"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
